# tic_tac_toe

./: .gitmodules  Board.cpp  Board.hpp  CMakeLists.txt  LICENSE  README.md  game.cpp  main.cpp  tic  utility.cpp  utility.hpp
.github/workflows/: cmake-multi-platform.yml
ModelData/: config.json  modelP2.txt  modelParams.txt  states.nndb  tic_tac_toe_boards_with_moves.nndb  tic_tac_toe_boards_with_moves.txt
